- make generator a bit lazier - don't make the queue exclusive, Bunny/RabbitMQ were complaining:   > Error Reply Code: 405\nError Reply Text: RESOURCE_LOCKED - cannot   > obtain exclusive access to locked queue 'logstash-input-yay' in   > vhost '/'   despite there being only one user of the queue.

--- a/tests/amqp/logstash-amqp-input.conf
+++ b/tests/amqp/logstash-amqp-input.conf
@@ -1,6 +1,7 @@
 input {
   amqp {
     exchange => "logstash-testing"
+    exclusive => false
     name => "logstash-input-yay"
     type => "amqp"
     host => "localhost"
