--- a/tests/amqp/logstash-amqp-input.conf
+++ b/tests/amqp/logstash-amqp-input.conf
@@ -3,6 +3,7 @@ input {
     exchange => "logstash-testing"
     exclusive => false
     name => "logstash-input-yay"
+    key => "logstash"
     type => "amqp"
     host => "localhost"
     port => 5699
