- I'm bad at configuration.

--- a/tests/amqp/Makefile
+++ b/tests/amqp/Makefile
@@ -4,6 +4,9 @@ dependencies: rabbitmq logstash
 run:
 	foreman start
 
+clean:
+	rm -r rabbitmq
+
 .PHONY: rabbitmq
 rabbitmq:
 	$(MAKE) -C ../../build/rabbitmq
