--- a/tests/amqp/fanout/logstash-amqp-input.conf
+++ b/tests/amqp/fanout/logstash-amqp-input.conf
@@ -1,7 +1,7 @@
 input {
   amqp {
-    exchange => "logstash-testing"
-    exclusive => false
+    exchange => "logstash-testing-fanout"
+    #exclusive => false
     name => "logstash-input-yay"
     key => "logstash"
     type => "amqp"
