--- a/tests/amqp/direct/Procfile
+++ b/tests/amqp/direct/Procfile
@@ -1,4 +1,4 @@
-rabbitmq: env RABBITMQ_MNESIA_BASE=./rabbitmq/mnesia RABBITMQ_LOG_BASE=./rabbitmq/log RABBITMQ_NODENAME=logstash-testing RABBITMQ_NODE_PORT=5699 ../../build/rabbitmq/rabbitmq_server-*/sbin/rabbitmq-server
-logstash_amqp_output: java -jar ../../build/logstash/logstash-*/build/logstash-*-monolithic.jar agent -v -f logstash-amqp-output.conf
-logstash_amqp_input: java -jar ../../build/logstash/logstash-*/build/logstash-*-monolithic.jar agent -v -f logstash-amqp-input.conf
-data_generator: ruby generator.rb
+rabbitmq: env RABBITMQ_MNESIA_BASE=./rabbitmq/mnesia RABBITMQ_LOG_BASE=./rabbitmq/log RABBITMQ_NODENAME=logstash-testing RABBITMQ_NODE_PORT=5699 ../../../build/rabbitmq/rabbitmq_server-*/sbin/rabbitmq-server
+logstash_amqp_output: java -jar ../../../build/logstash/logstash-*/build/logstash-*-monolithic.jar agent -v -f logstash-amqp-output.conf
+logstash_amqp_input: java -jar ../../../build/logstash/logstash-*/build/logstash-*-monolithic.jar agent -v -f logstash-amqp-input.conf
+data_generator: ruby ../generator.rb
