--- a/tests/graylog2/graylog2.conf
+++ b/tests/graylog2/graylog2.conf
@@ -10,9 +10,9 @@ elasticsearch_index_name = graylog2
 force_syslog_rdns = false
 
 # MongoDB Configuration
-mongodb_useauth = true
-mongodb_user = grayloguser
-mongodb_password = 123
+mongodb_useauth = false
+#mongodb_user = graylog2
+#mongodb_password = graylog2
 mongodb_host = localhost
 #mongodb_replica_set = localhost:27017,localhost:27018,localhost:27019
 mongodb_database = graylog2
